--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "description": "app",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
