--- a/package.json
+++ b/package.json
@@ -1,27 +1,38 @@
 {
-  "name": "buzz-test",
+  "name": "i-cannot-hide-my-shame",
   "version": "1.0.0",
-  "description": "",
+  "description": "I cannot hide my shame",
   "main": "main.js",
   "scripts": {
     "dev": "concurrently -k \"npm run dev:vite\" \"npm run dev:electron\"",
     "dev:vite": "cd app && npm run dev",
     "dev:electron": "wait-on http://localhost:5173 && cross-env VITE_DEV_SERVER_URL=http://localhost:5173 electron .",
     "build": "cd app && npm run build",
-    "start": "npm run build && electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron-forge start",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "package": "electron-forge package",
+    "make": "npm run build && electron-forge make"
   },
-  "author": "",
+  "author": "joeljoshsam",
   "license": "ISC",
   "devDependencies": {
+    "@electron-forge/cli": "^7.11.1",
+    "@electron-forge/maker-deb": "^7.11.1",
+    "@electron-forge/maker-rpm": "^7.11.1",
+    "@electron-forge/maker-squirrel": "^7.11.1",
+    "@electron-forge/maker-zip": "^7.11.1",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.11.1",
+    "@electron-forge/plugin-fuses": "^7.11.1",
+    "@electron/fuses": "^1.8.0",
     "concurrently": "^9.0.0",
     "cross-env": "^7.0.3",
     "electron": "^40.1.0",
-    "wait-on": "^8.0.0",
     "typescript": "~5.9.3",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "wait-on": "^8.0.0"
   },
   "dependencies": {
+    "electron-squirrel-startup": "^1.0.1",
     "node-buzzers": "^2.2.0"
   }
 }
